--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="./css/index.css" rel="stylesheet">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
     <title>Index</title>
   </head>
   <body>
+    <div class="container mt-5">
+        <h1>Index</h1>
+        <div class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" href="japan.html">Japan</a>
+            </li>
+
+        </div>
+
+    </div>
 
   </body>
 </html>
