Japan cards created

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
     <title>Index</title>
   </head>
   <body>
+
     <div class="container mt-5">
         <h1>Index</h1>
-        <div class="nav nav-tabs">
+        <ul class="nav nav-tabs">
             <li class="nav-item">
                 <a class="nav-link active" href="japan.html">Japan</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./japan-cards.html">Japan Cards</a>
+            </li>
+        </ul>
 
-        </div>
 
     </div>
 
