--- a/japan-cards.html
+++ b/japan-cards.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
-    <link href="./css/japan-cards.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/86b00128b2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/japan-cards.css">
+    <link rel="stylesheet" href="css/japan.css">
     <!-- no recomendable style -->
     <style>
         @media (min-width: 992px){
@@ -19,6 +21,27 @@
 
   </head>
   <body>
+      <!-- Logo  -->
+        <div class="container-menu">
+            <!-- <div class="caja-menu">
+             <img src="images/japan/logo.png" width="50px" align="center">
+           </div> -->
+           <div class="caja-menu"><a href="index.html"> <i class="fa-solid fa-house"></i> Inicio</a> </div>
+           <div class="caja-menu"><a href="#"><i class="fa-solid fa-map-location"></i> Rutas</a> </div>
+           <div class="caja-menu"><a href="#"><i class="fa-solid fa-square-h"></i> Hoteles</a> </div>
+           <div class="caja-menu"><a href="#"><i class="fa-solid fa-plane"></i> Vuelos</a> </div>
+           <div class="caja-menu"><a href="#"><i class="fa-solid fa-address-book"></i> Contacto</a> </div>
+           <div class="caja-menu">
+             <a href="#">
+                <i class="fa-brands fa-twitter-square"></i>
+             </a>
+             <a href="#">
+                <i class="fa-brands fa-facebook-square"></i>
+             </a>
+           </div>
+       </div>
+
+
       <!-- contenido principal -->
       <main class="container d-flex align-items-center justify-content-center alto-100">
         <!-- <h1 class="m-0 h-1">Japan cards</h1> -->
@@ -143,7 +166,18 @@
 
               </article>
             </div>
+            <!-- footer -->
+            <div class="row">
+              <div class="col-14 p-1 rounded">
+                <div class="foot-text">
+                  @2022 ascii274 exercises.
+                </div>
+              </div>
+            </div>
+
         </div>
+
+
 
       </main>
 
