Under construction text add

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div class="container mt-5">
         <h1>Index</h1>
+        <h6>Under construction 10/06/2022</h6>
         <ul class="nav nav-tabs">
             <li class="nav-item">
                 <a class="nav-link active" href="japan.html">Japan</a>
