--- a/japan-cards.html
+++ b/japan-cards.html
@@ -168,7 +168,7 @@
             </div>
             <!-- footer -->
             <div class="row">
-              <div class="col-14 p-1 rounded">
+              <div class="col-14 p-1">
                 <div class="foot-text">
                   @2022 ascii274 exercises.
                 </div>
