--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
     <link href="./css/index.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/japan.css">
     <!-- <link href="./css/index-responsive.css" rel="stylesheet"> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script> 
     <title>Home</title>
@@ -85,8 +86,8 @@
                   Frontend
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Japan</a></li>
-                  <li><a class="dropdown-item" href="#">Japan-cards</a></li>
+                  <li><a class="dropdown-item" href="./japan.html">Japan</a></li>
+                  <li><a class="dropdown-item" href="./japan-cards.html">Japan-cards</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
@@ -160,7 +161,11 @@
         </div>
       </div>
 
+    </div>    
+    <div class="footer">
+      <div class="foot-text">
+        2022 @ascii274 exercises.
+      </div>
     </div>
-
   </body>
 </html>
