--- a/japan-cards.html
+++ b/japan-cards.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script> 
     <script src="https://kit.fontawesome.com/86b00128b2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/japan-cards.css">
     <link rel="stylesheet" href="css/japan.css">
@@ -21,6 +22,61 @@
 
   </head>
   <body>
+
+    <nav class="navbar bg-light fixed-top">
+      <div class="container ">
+        <a class="navbar-brand" href="#">&nbsp;</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+            <h12 class="offcanvas-title" id="offcanvasNavbarLabel">Updated: 22/08/2022</h12>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Frontend
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="./japan.html">Japan</a></li>
+                  <li><a class="dropdown-item" href="./japan-cards.html">Japan-cards</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+                </ul>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Backend
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Under construction</a></li>
+                </ul>
+
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <br>
+    <br>
       <!-- Logo  -->
         <div class="container-menu">
             <!-- <div class="caja-menu">
