--- a/backend.html
+++ b/backend.html
@@ -86,7 +86,7 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./fontend.html">Fontend</a>
+                <a class="nav-link" href="./frontend.html">Fontend</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./backend.html">Backend</a>
