update navigation bar

--- a/japan.html
+++ b/japan.html
@@ -11,61 +11,42 @@
   </head>
   <body>
 
-    <nav class="navbar bg-light fixed-top">
-      <div class="container ">
-        <a class="navbar-brand" href="#">&nbsp;</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
-            <h12 class="offcanvas-title" id="offcanvasNavbarLabel">Updated: 22/08/2022</h12>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Frontend
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./japan.html">Japan</a></li>
-                  <li><a class="dropdown-item" href="./japan-cards.html">Japan-cards</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
+        <!-- menu -->
+        <nav class="navbar bg-light fixed-top">
+          <div class="container">        
+            <p class="card-text fs-6 fw-light text-body">Joel Cabatay <br> Fullstack Developer Junior</p>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+              <div class="offcanvas-header">
+                <small class="offcanvas-title" id="offcanvasNavbarLabel">Updated: 13/09/2022</small>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                   </li>
-                  <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+                  <li class="nav-item">
+                    <a class="nav-link" href="./frontend.html">Fontend</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./backend.html">Backend</a>
+                  </li>
                 </ul>
-              </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Backend
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Under construction</a></li>
-                </ul>
-
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-    </nav>
-        <!-- header big-logo banner-->
+        </nav>
+
+        <!-- header big-logo banner-->  
         <br>
-        <div class="container-banner">
+        <div class="container-banner mt-5">
           <!-- Logo  -->
             <div class="container-menu">
                 <div class="caja-menu">
