frontend.html cards aligned, update code

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     <!-- menu -->
     <nav class="navbar bg-light fixed-top">
       <div class="container">        
-        <p class="card-text fs-6 fw-light text-body">Joel Cabatay <br> Fullstack Developer Junior</p>
+        <p class="card-text fs-6 fw-light text-body text-muted">Joel Cabatay <br> Fullstack Developer Junior</p>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
             
-            <p class="card-text fs-6 fw-light text-body">Updated: 13/09/2022</p>
+            <small class="offcanvas-title text-muted fw-light text-body" id="offcanvasNavbarLabel">Updated: 20/09/2022</small>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
