index.html update

--- a/index.html
+++ b/index.html
@@ -111,11 +111,14 @@
             Hi, my name is Joel
             
           </p>
-          <p id="about" class="text-align fs-4">
+          <p id="about" class="text-align fs-4">     
             
-            I'm a Java Developer and studying React in this moments.
+            I am passionate about Linux and have always felt an attraction to programming. During the pandemic I decided to turn my professional future around.
+            I want to work on what has always fascinated me.<br>
+
+            I'm a Java Developer Junior and studying React in this moments.
             I hope i'll finish it before this comming March 2023.
-            I'm looking for a Job remotely or part time as Fullstack developer.
+            I'm looking for a Job remotely or part time as Fullstack Developer Junior.
           </p>
         </div>        
       </div>
