card transform and scale add

--- a/backend.html
+++ b/backend.html
@@ -17,7 +17,7 @@
         font-size: 16px;
         /* google font: Cairo */						
         font-family: Cairo, monospace; 
-        text-align: justify;
+        /* text-align: justify; */
         border-width: 1px;			
         padding-top: 10px;
         padding-right: 20px;
@@ -69,6 +69,13 @@
 
       #thumbnail{
         box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+      }
+
+      .card:hover{
+        transform: scale(1.05);
+        /* background-color: #fff; */
+        transition-duration: 2s;
+        
       }
 
     </style>
