--- a/frontend.html
+++ b/frontend.html
@@ -72,6 +72,12 @@
         box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
       }
 
+      .card:hover{
+        transform: scale(1.05);
+        /* background-color: #fff; */
+        transition-duration: 2s;
+        
+      }
     </style>
 
   </head>
